[package]
name = "rufca"
edition = "2024"
version = "1.0.0"
authors = ["sarkar-segfault <adhritsarkar@proton.me>"]
description = "Rust Flash Cards"
license = "GPL-3.0-or-later"
repository = "https://github.com/sarkar-segfault/rufca"
homepage = "https://crates.io/crates/rufca"
documentation = "https://docs.rs/rufca"
readme = "README.md"
keywords = ["productivity", "cbor", "interactive", "education", "fun"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.6.0", default-features = false, features = ["color", "help", "std", "usage", "derive"] }
colored = { version = "3.1.1", features = ["no-color"] }
ctrlc = "3.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
